src/css/main.css
html, body {
    overflow: hidden;
    position: fixed;
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    display: flex;
    align-content: center;
    flex-direction: row;
    background-color: #8a403b;
}

.headerBackground{
    position: absolute;
    width: 100%;
    height: 5rem;
    background-color: #590600;
    top: 0%;
    z-index: -1;
}

.content{
    width: 60%;
    max-width: 1200px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-content: center;
}

@media only screen and (max-width: 1200px) {
    .content{
        width: 80%;
    }
}

@media only screen and (max-width: 600px) {
    .content{
        width: 100%;
    }
}

@font-face {
    font-family: Gidole;
    font-style: normal;
    font-weight: 400;
    src: url('../../fonts/Gidole-Regular.ttf') format('ttf');
}

.header{
    font-family: 'Gidole', monospace;
    color: #efe7da;
}

.headerDiv{
    width: 100%;
    height: 5rem;
    display: flex;
    flex-direction: column;
    align-content: center;
}

canvas {
    -webkit-tap-highlight-color: transparent;
    z-index: 1;
    width: 100%;
    height: 100%;
}

.footerDiv{
    display: flex;
    justify-content: center;
    flex-direction: row;
    width: 100%;
    min-height: 0.75rem;
}

.footer {
    margin: 0.5rem;
    font-family: 'Gidole', monospace;
    color: #efe7da;
}

